# salsaG-installation

./: README.md  install.sh
salsag-cli/: README.md  requirements.txt  setup.py
salsag-cli/salsag/: __init__.py  cli.py  config.py  core.py  rekor_client.py  sg_logging.py
salsag-mcp/: README.md  pyproject.toml
salsag-mcp/src/salsag_mcp/: __init__.py  __main__.py  server.py
templates/: buildspec.yml  salsag.yml
templates/.github/workflows/: salsagate-pipeline.yml
templates/trust-service/: buildspec-signer-keyless.yml
