[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salsag-mcp"
version = "1.0.0"
description = "MCP server for SalsaGate supply chain security installation and verification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "UC Berkeley MICS Capstone" }
]
keywords = ["mcp", "salsagate", "supply-chain", "security", "sigstore"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
salsag-mcp = "salsag_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/salsag_mcp"]
